--- a/frontend/src/components/NavBar.css
+++ b/frontend/src/components/NavBar.css
@@ -38,10 +38,32 @@ button {
 }
 
 .items {
-  color: #000000;
-  cursor: pointer;
+  margin: 1rem;
+  justify-content: space-between;
+  display: flex;
   padding: 1rem 2rem;
-  border-bottom: 1px solid #7c51af;
+  font-weight: 700;
+  background: rgb(255, 255, 255);
+  color: blueviolet;
+  border-radius: .5rem;
+  border-bottom: 2px solid blueviolet;
+  border-right: 2px solid blueviolet;
+  border-top: 2px solid white;
+  border-left: 2px solid white;
+  transition-duration: 1s;
+  transition-property: border-top,
+  border-left,
+  border-bottom,
+  border-right,
+  box-shadow;
+}
+
+.items:hover {
+  border-top: 2px solid blueviolet;
+  border-left: 2px solid blueviolet;
+  border-bottom: 2px solid rgb(238, 103, 238);
+  border-right: 2px solid rgb(238, 103, 238);
+  box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px;
 }
 
 .btn {
